--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mywechat">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".SunnyWeatherApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyWechat"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.weather.WeatherActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SunnyActivity"
+            android:exported="true"/>
         <activity
             android:name=".ChatActivity"
             android:exported="true">
@@ -40,6 +49,7 @@
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
+
     </application>
 
 </manifest>
